2004-05-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configs/msc[67]-project.zip: Change version to "current"

2004-05-14  Saito <saito@intaa.net>

	* configs/msc[67]-project.zip: Fix for PortAudio DLL.
	* timidity/w32g_pref.c: Fix typo.
	* timidity/mix.c: Fix around envelope.

2004-05-14  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/{output.c,portaudio_a.c,w32_portaudio.h,
	  w32_portaudio_dll.c}: Support for PortAudio DLL.

2004-05-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/tclIndex: Resume order

2003-05-05  Chisato Yamauchi <cyamauch@hst.phyas.aichi-edu.ac.jp>

	* TiMidity(-uj).ad.in, interface/xaw_i.c:
	  Update app-defaults file for XAW interface

2004-05-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, interface/server_c.c, interface/slang_c.c,
	  interface/vt100_c.c, interface/w32g_{i,syn}.c, interface/xaw_i.c,
	  timidity/timidity.c: Fix to fit with case of "current" version

2004-05-02  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (parse_opt_h): ditto.
	* timidity/timidity.h (DEFAULT_RESAMPLATION): ditto.
	* configure.in: --enable-spline was not working

2004-04-29  Saito <saito@intaa.net>

	* timidity/reverb.c, timidity/optcode.h: Fix around Insertion Effect.

2004-04-28  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c: Fix around temperament control

2004-04-27  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1: Update

2004-04-26  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1: Update
	* timidity/timidity.c:
	  Rename --flac-compression-level -> --flac-complevel

2004-04-25  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1,
	  doc/C/timidity.cfg.5, doc/ja_JP.eucJP/timidity.cfg.5: Update
	* interface/ncurs_c.c: Fix a little

2004-04-25  URABE Shyouhei <shyouhei@ice.uec.ac.jp>

	* configure.in: Bug fix and autoreconf

2004-04-23  Kentaro Sato <kentaro@ranvis.com>
